# kenning

./: .buildinfo  .ci.yml  .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  AnomalyDetectionDatasetInfo.md  LICENSE  MANIFEST.in  README.md  README.rst  cmd-usage.html  dl-deployment-stack.html  genindex.html  index.html  introduction.html  json-scenarios.html  kenning-api.html  kenning-development.html  kenning-flow.html  kenning-gallery.html  kenning-measurements.html  kenning-platforms.html  kenning-protocols.html  kenning-resources.html  kenning-variables.html  kenning-zephyr-runtime.html  local-cpu-tvm-tensorflow-classification.md  noxfile.py  objects.inv  onnx-conversion-support.html  pipeline-optimizer.html  project-readme.html  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  ros2-integration.html  sample-automl.md  sample-report.html  (+5 more)
.github/workflows/: docs-generation.yml  edge-ai-tester-docs.yml  flake8.yml  kenning-docs.yml  onnx-conversion.yml  pre-commit.yml
_sources/: cmd-usage.md.txt  cmd-usage.rst.txt  dl-deployment-stack.md.txt  dl-deployment-stack.rst.txt  index.md.txt  json-scenarios.md.txt  kenning-api.md.txt  kenning-api.rst.txt  kenning-development.md.txt  kenning-flow.md.txt  kenning-gallery.md.txt  kenning-measurements.md.txt  kenning-platforms.md.txt  kenning-protocols.md.txt  kenning-resources.md.txt  kenning-variables.md.txt  pipeline-optimizer.md.txt  project-readme.md.txt  ros2-integration.md.txt  sample-automl-report.md.txt  sample-report.md.txt
_sources/gallery/: anomaly-detection-on-mcu.md.txt  displaying-information-example.md.txt  kenning-zephyr-runtime.md.txt  renode-integration-example.md.txt  structured-pruning-torch.md.txt  tflite-tvm.md.txt  unstructured-pruning-tensorflow.md.txt  yolact-object-detection-comparison.md.txt
_static/: sphinx_immaterial_theme.e4fd9664b1aa885ea.min.css
_static/css/: badge_only.css  bokeh.css  compatibility.css  theme.css
_static/js/: theme.js
demo-scripts/: client.sh  server.sh
dl_framework_analyzer/: __init__.py
dl_framework_analyzer/compilers/: __init__.py  tflite.py  tvm.py
dl_framework_analyzer/core/: __init__.py  compiler.py  dataset.py  drawing.py  inference.py  measurements.py  model.py  onnxconversion.py  report.py  runtime.py  runtimeprotocol.py
dl_framework_analyzer/datasets/: __init__.py  pet_dataset.py  random_dataset.py
dl_framework_analyzer/modelwrappers/: __init__.py
dl_framework_analyzer/onnxconverters/: __init__.py  mxnet.py  pytorch.py  tensorflow.py
dl_framework_analyzer/resources/: __init__.py
dl_framework_analyzer/runtimeprotocols/: __init__.py  network.py
dl_framework_analyzer/runtimes/: coral.py  tflite.py  tvm.py
dl_framework_analyzer/scenarios/: __init__.py  inference_client.py  inference_performance.py  inference_server.py  model_training.py  onnx_conversion.py  randomized_classification.py  tvm_rpc_xavier_sample.py
dl_framework_analyzer/utils/: __init__.py  class_loader.py  logger.py
docs/: Makefile
docs/source/: cmd-usage.md  cmd-usage.rst  conf.py  dl-deployment-stack.md  dl-deployment-stack.rst  index.md  index.rst  introduction.md  introduction.rst  json-scenarios.md  (+16 more)
gallery/: anomaly-detection-automl.html  anomaly-detection-on-mcu.html  displaying-information-example.html  kenning-ros2-runtime.html  kenning-zephyr-runtime.html  pipeline-manager-example.html  renode-integration-example.html  structured-pruning-torch.html  tflite-tvm.html  unstructured-pruning-tensorflow.html  yolact-object-detection-comparison.html
img/: accuracy_vs_inference_time.html  classification_metric_comparison.html  comparison_training_plot.html  confusion_matrix.html  cpu_memory_usage.html  cpu_usage.html  cumulative_exceptions_plot_comparison.html  cumulative_executed_instructions_cpu0_plot_comparison.html  cumulative_memory_reads_plot_comparison.html  cumulative_memory_writes_plot_comparison.html  cumulative_nvic0_reads_plot_comparison.html  cumulative_nvic0_writes_plot_comparison.html  cumulative_uart0_reads_plot_comparison.html  cumulative_uart0_writes_plot_comparison.html  cumulative_uart2_reads_plot_comparison.html  cumulative_uart2_writes_plot_comparison.html  exceptions_plot_comparison.html  executed_instructions_cpu0_plot_comparison.html  inference_step_comparison.html  inference_time.html  mean_performance_comparison.html  memory_reads_plot_comparison.html  memory_writes_plot_comparison.html  nvic0_reads_plot_comparison.html  nvic0_writes_plot_comparison.html  trained_models_plot.html  training_plot.html  uart0_reads_plot_comparison.html  uart0_writes_plot_comparison.html  uart2_reads_plot_comparison.html  uart2_writes_plot_comparison.html
kenning/: __init__.py  __main__.py
kenning/sparsity_aware_kernel/: __init__.py  pyproject.toml  setup.py
kenning/sparsity_aware_kernel/custom_ext/: ops.h  pybind.cpp
kenning/sparsity_aware_kernel/custom_ext/gptq/: q_compressed_gemm.cu  utils.hpp
kenning/sparsity_aware_kernel/kenning_sparsity_aware_kernel/: __init__.py  gptq_runner.py  utils.py
kenning/sparsity_aware_kernel/kenning_sparsity_aware_kernel/layers/: __init__.py  gptq_compressed_layer.py  gptq_layer.py
sample-automl/: genindex.html  objects.inv  sample-automl.html  searchindex.js
sample-zephyr-tracing/: genindex.html  sample-zephyr-tracing.html
scripts/: classification-comparison-report-using-cfgs.sh  classification-comparison-report.sh  iree-tensorflow-classification-cpu.sh  iree-tensorflow-classification-gpu.sh  json-inference.sh  json-onnx-gpu-classification.sh  json-tflite-tvm-classification-client.sh  json-tflite-tvm-classification-server.sh  onnxconversions.sh  optimization-tflite-tvm-tensorflow-magic-wand.sh  optimization-tflite-tvm-tensorflow-pet-dataset.sh  prepare-kenning-zephyr-runtime.sh  renode-zephelin-tflite-anomaly-detection-vae.sh  tflite-tvm-classification-client.sh  tvm-darknet-detection-cpu.sh  tvm-tensorflow-classification-cpu.sh  tvm-tensorflow-classification-gpu.sh  yolact-detection-comparison-report.sh  yolact-onnx-detection.sh  yolact-tflite-detection.sh  zephyr-automl-report.sh
(+656 files in other folders)
