# Copyright (c) 2020-2023 Antmicro <www.antmicro.com>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "cython<3.0.0", "numpy~=1.23.5"]
build-backend = "setuptools.build_meta"

[project]
name = "kenning"
version = "0.0.1"
description = "Kenning - a framework for implementing and testing deployment pipelines for deep learning applications on edge devices"
authors = [
    {name = "Antmicro Ltd.", email = "contact@antmicro.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
readme = "README.md"
dependencies = [
    "argcomplete",
    "astunparse>=1.6.3",
    "coloredlogs",
    "importlib_resources>=5.1.4; python_version<'3.9'",
    "isort>=5.12.0",
    "jsonschema>=4.16.0",
    "matplotlib>=3.3.4",
    "numpy~=1.23.5",
    "onnx>=1.7.0",
    "Pillow>=8.1.0",
    "psutil>=5.8.0",
    "requests",
    "scikit_learn>=0.24.1",
    "scipy~=1.10.1",
    "tomli; python_version<'3.11'",
    "tqdm>=4.56.2",
]

[project.optional-dependencies]
docs = [
    "antmicro-sphinx-utils @ git+https://github.com/antmicro/antmicro-sphinx-utils.git",
    "docutils",
    "myst-parser @ git+https://github.com/executablebooks/MyST-Parser.git",
    "sphinx_tabs",
    "sphinx-immaterial @ https://github.com/antmicro/sphinx-immaterial/releases/download/tip/sphinx_immaterial-0.0.post1.tip-py3-none-any.whl",
    "sphinx>=5.1.0,<7.1.0",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-napoleon",
]
tensorflow = [
    "onnx_tf~=1.10.0",
    "tensorflow_addons~=0.17.1",
    "tensorflow_model_optimization~=0.7.3",
    "tensorflow_probability~=0.17.0",
    "tensorflow~=2.9.1",
    "tf2onnx~=1.11.1",
]
torch = [
    "onnx2torch~=1.5.4",
    "torch~=1.13.0",
    "torchvision~=0.14.0",
]
mxnet = [
    "gluoncv>=0.10.2",
    "mxnet~=1.9.1",
]
nvidia_perf = [
    "pynvml>=8.0.4",
]
object_detection = [
    "boto3>=1.17.5",
    "botocore>=1.20.5",
    "cython<3.0.0",
    "opencv_python>=4.5.2",
    "pandas>=1.2.1",
    "pycocotools",
]
speech_to_text = [
    "librosa",
    "pydub",
]
tflite = [
    "tflite",
]
tvm = [
    "apache-tvm",
]
iree = [
    "iree-compiler==20230209.425",
    "iree-runtime==20230209.425",
    "iree-tools-tf==20230209.425",
    "iree-tools-tflite==20230209.425",
]
onnxruntime = [
    "onnxruntime",
]
test = [
    "pytest-dependency",
    "pytest-mock",
    "pytest-order",
    "pytest-reportlog",
    "pytest-xdist",
    "pytest",
    "tuttest @ git+https://github.com/antmicro/tuttest.git",
]
real_time_visualization = [
    "dearpygui>=1.6.2",
]
pipeline_manager = [
    "pipeline_manager @ git+https://github.com/antmicro/kenning-pipeline-manager.git",
    "pipeline_manager_backend_communication @ git+https://github.com/antmicro/kenning-pipeline-manager-backend-communication.git",
]
reports = [
    "kenning[docs]",
    "Jinja2>=2.11.2",
    "servis[bokeh,matplotlib] @ git+https://github.com/antmicro/servis.git",
]
uart = [
    "pyserial",
]
renode = [
    "pyrenode @ git+https://github.com/antmicro/pyrenode.git",
    "renode-run @ git+https://github.com/antmicro/renode-run.git",
]
nni = [
    "kenning[torch]",
    "dill~=0.3.6",
    "nni~=2.10.0",
    "tensorboard~=2.11.1",
]

[project.scripts]
kenning = "kenning.cli.cli:main"

[project.urls]
homepage = "https://antmicro.github.io/kenning"
repository = "https://github.com/antmicro/kenning"

[tool.ruff]
line-length = 79
select = [
    "D201", # No blank lines allowed before function docstring
    "D206", # Docstring should be indented with spaces, not tabs
    "D207", # Docstring is under-indented
    "D208", # Docstring is over-indented
    "D209", # Multi-line docstring closing quotes should be on a separate line
    "D210", # No whitespaces allowed surrounding docstring text
    "D213", # Multi-line docstring summary should start at the second line
    "D214", # Section is over-indented
    "D215", # Section underline is over-indented
    "D300", # Use """triple double quotes"""
    "D405", # Section name should be properly capitalized
    "D406", # Section name should end with a newline
    "D407", # Missing dashed underline after section
    "D408", # Section underline should be in the line following the section's name
    "D409", # Section underline should match the length of its name
    "D410", # Missing blank line after section
    "D411", # Missing blank line before section
    "D412", # No blank lines allowed between a section header and its content
    "D414", # Section has no content
    "D417", # Missing argument descriptions in the docstring
    "D419", # Docstring is empty
    "E",    # PEP8 errors
    "E261", # At least two spaces before inline comment
    "E225", # Missing whitespace around operator
    "F",    # PEP8 warnings
]

[tool.pytest.ini_options]
markers = [
    "slow",  # marks tests as slow (deselect with '-m "not slow"')
    "fast",  # marks tests as fast (deselect with '-m "not fast"')
    "serial",
    "docs",  # marks tests extracted from Kenning documentation (without gallery)
    "docs_gallery",  # marks tests extracted from Kenning gallery
]
log_cli = true
log_level = "DEBUG"
log_format = "[%(asctime)-15s %(filename)s:%(lineno)s] [%(levelname)s] %(message)s"
